--- a/composer.json
+++ b/composer.json
@@ -62,4 +62,5 @@
     },
     "minimum-stability": "dev",
     "prefer-stable": true
+    "background.customImages": ["https://www.pixiv.net/en/artworks/103560678"]
 }
